# Virtlyst

./: .gitignore  CMakeLists.txt  README.md  config.ini  debug-config.ini  debug.sh  virtlyst
debian/: .gitignore  changelog  control  copyright  files  postinst  postrm  rules  virtlyst.postrm.debhelper  virtlyst.service
root/src/: base.html  create.html  instances.html  servers.html  sidebar.html
root/static/css/: main.css
src/: CMakeLists.txt  create.cpp  root.cpp  server.cpp  server.h  virtlyst.cpp  virtlyst.h
src/lib/: generic.h
